# bugs-flask-backend

./: .env.example  .gitignore  pyproject.toml
instance/: a.db
src/: ai.py  app.py  auth.py  config.py  models.py  routes.py  utils.py
src/ortEngine/: detect.py  utils.py
src/tasks/: __init__.py  run_detect.py  run_obb.py  utils.py
