[project]
name = "bugs-flask-backend"
version = "0.1.0"
description = "害虫目标检测系统"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
